Move conference link

--- a/UMass_Physical_Mathematics_of_QFT_Summer_School.html
+++ b/UMass_Physical_Mathematics_of_QFT_Summer_School.html
@@ -101,73 +101,32 @@
 
 <p>
 
-The <a href="http://www.math.umass.edu">Department of Mathematics and Statistics</a> at the University of Massachusetts, Amherst will host a summer school on <b>Physical Mathematics of Quantum Field Theory</b> during the week August 1st to 5th, 2022.  This workshop was previously scheduled to take place in August 2020, but was postponed due to the COVID-19 pandemic. <br /><br />
+The <a href="http://www.math.umass.edu">Department of Mathematics and Statistics</a> at the University of Massachusetts, Amherst is hosting a series of summer schools on the physical mathematics of quantum field theory.  
 
-<p> The aim of the workshop is to introduce young researchers on the boundary between mathematics and physics to recent ideas in classical and quantum field theory using notions from complex geometry and algebraic topology. The target audience of the workshop is advanced graduate students and post-docs, from both mathematics and theoretical physics.  The schedule will be designed to include a large amount of time for participants to interact. We hope especially to encourage conversations between mathematicians and physicists.  <br /> <br />
+<p></br><p>
 
-<p>All talks will be held in the following location:
-<div align="center"><b>Integrative Learning Center, Room S131</b></div> 
-You can find a UMass Amherst campus map <a href="https://www.umass.edu/sites/default/files/2021-06/campus-map.pdf">here</a>.
-<br/><br/>
+<h3>Previous and Forthcoming Events</h3>
 
-<p> There will be series of lectures given by: <br />
+
+
 <ul>
-<li><a href="https://www.math.upenn.edu/people/ron-donagi">Ron Donagi</a>, University of Pennsylvania - <b>Supermoduli</b></li>
-<li><a href="https://www.angelagibney.org">Angela Gibney</a>, University of Pennsylvania - <b>On Vector Bundles of Conformal Blocks on the Moduli Space of Curves from Representations of Vertex Operator Algebras</b>
-  <ol class="customIndent">
-    <li>Lecture 1: Introduction to the week and moduli of curves</li>
-    <li>Lecture 2: Vertex operator algebras</li>
-    <li>Lecture 3: Sheaves of coinvariants and their properties</li>
-    <li>Lecture 4: Open problems</li>
-  </ol>
-  Lecture notes are available <a href="vertex_algebras_and_moduli_space_of_curvesAllLectures.pdf">here</a>.</li>
-<li><a href="https://phys.washington.edu/people/natalie-paquette">Natalie Paquette</a>, University of Washington - <b>Twisted Theories and Koszul Duality</b></li>
-<li><a href="https://sites.google.com/site/dupeiphysics/">Du Pei</a>, University of Southern Denmark and CMSA, Harvard - <b>Invariants of Manifolds from 6d QFTs</b></br></li>
+
+<li> <a href="https://chrisjelliott.github.io/UMass_Physical_Mathematics_of_QFT_Summer_School_2022.html">Physical Mathematics Summer School 2022</a>.  </br>Organized by Chris Elliott, Owen Gwilliam and Matteo Lotito.  <p></br><b>Minicourse speakers:</b>
+<ul class="customIndent">
+<li>Angela Gibney
+<li>Ron Donagi
+<li> Natalie Paquette
+<li>Du Pei
 </ul>
-
-<p></br>
-
-<h2>Conference Photo</h2>
-You can find a photo of the praticipants taken at the school <a href="UMass_Physical_Math_Photo.JPG">here</a>.
-
-<p></br>
-
- <h2>Schedule</h2>
-
-<p> We've made a tentative schedule, which is available <a href="Physical_Math_Tentative_Schedule.pdf">here</a>.
-
-<p></br>
-
-  <h2>Practical Information</h2>
-
-<p> For practical information on travel to UMass to attend the summer school, see <a href="https://people.math.umass.edu/~celliott/Physical_Mathematics_FAQs.html">here</a>.
-
-<p></br>
-
-  <h2>List of Participants</h2>
-
-<p> For a list of registered participants, see <a href="https://people.math.umass.edu/~celliott/Physical_Mathematics_participants.html">here</a>
-
- <p></br>
-
-  
-<h2>Registration</h2>
-
-<p>Due to the volume of applications we have reached our maximum capacity, and registration is now closed.
-<!--<p>If you are interested in participating, please fill in the registration form here: <br />
-<b><center><a href="https://forms.gle/d4vMiPYky71BaMjQ7">Physical Mathematical Summer School 2022 Registration Form</a></center></b> <br />
-There is some funding available to support the travel and accommodation of participants, with graduate students given priority. Registration with a request for funding will be open until March 31st, 2022 <b>Our funds have all been allocated, unfortunately we will not be able to fund any further registrations</b>.  Registration without a request for funding closes June 15th. --><br /><br /><br />
-
-<p>If you have any questions, you can contact the organizers by e-mail at the following addresses <br />
-Chris Elliott: <a href="mailto:celliott@math.umass.edu">celliott@math.umass.edu</a> <br />
-Owen Gwilliam: <a href="mailto:gwilliam@math.umass.edu">gwilliam@math.umass.edu</a> <br />
-Matteo Lotito: <a href="mailto:mlotito@umass.edu">mlotito@umass.edu</a> <br />
-
-<hr>
-<font size=2>Last modified Monday February 28th, 2022.</font><br />
-<p><a href="http://www.math.umass.edu">UMass Mathematics home page</a>.
-
-
+<p></br><p>
+<li> <a href="https://umassamherst-qft-summer-school.github.io/">Physical Mathematics Summer School 2023</a>.  </br>Organized by Chris Elliott, Owen Gwilliam and Samantha Kirk. <p></br><b>Minicourse speakers:</b>
+<ul class="customIndent">
+<li>Philip Argyres
+<li>Reimundo Heluani
+<li>Monica Jinwoo Kang
+<li>Anne Moreau
+</ul>
+</ul>
 </div>
 
 </body>
