--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@ Amherst, MA 01002
 <p><br />
 <h3>Conferences and Workshops</h3>
 <ul>
-<li><li>In August 2022 I organised a summer school on <b><a href="UMass_Physical_Mathematics_of_QFT_Summer_School.html">Physical Mathematics of QFT</a></b>, together with <a href="http://people.math.umass.edu/~gwilliam">Owen Gwilliam</a> and Matteo Lotito.. 
+<li><li>I have been organizing a series of summer schools on <b><a href="UMass_Physical_Mathematics_of_QFT_Summer_School.html">Physical Mathematics of QFT</a></b>, together with <a href="http://people.math.umass.edu/~gwilliam">Owen Gwilliam</a>, <a href="https://www.mtholyoke.edu/directory/faculty-staff/samantha-kirk">Samantha Kirk</a> and <a href="https://sites.google.com/view/mlotito/">Matteo Lotito</a>. We hosted an event in August 2022 and will be running a second event in July 2023.
   <li> In July 2021 I organised a program at ICTS in Bangalore on <b><a href="https://www.icts.res.in/program/qftgrt2021">Quantum Fields, Geometry and Representation Theory</a></b>  See the link for details and registration.
 <li>In August 2020, because of the postponement of our physical mathematics conference due to COVID, I recorded a series of <a href="https://sites.google.com/view/physical-mathematics-of-qfts">masterclass videos</a> on supersymmetry and the BV formalism.
 <li>In January 2019 I organised a conference on <b><a href="https://indico.math.cnrs.fr/event/3885">Higher Structures in Holomorphic and Topological Field Theory</a></b>, together with <a href="http://www.ihes.fr/~pestun">Vasily Pestun</a>. 
