--- a/index.html
+++ b/index.html
@@ -132,6 +132,8 @@ Amherst, MA 01002
 <p></br />
   <h3>Teaching</h3>
   <ul>
+    <li>Spring 2023: Math 250 -- Number Theory and Math 455 -- Topology
+    <li>Fall 2022: Math 211 -- Multivariate Calculus and Math 271 -- Linear Algebra
     <li>Spring 2022: Ordinary Differential Equations for Scientists and Engineers<br/>
       <p><a href="https://blogs.umass.edu/math331/">Course Webpage</a>
     <li>Fall 2021: Math 411: Introduction to Abstract Algebra<br/>
@@ -175,6 +177,8 @@ Amherst, MA 01002
 <p><br />
 <h3>Conferences and Workshops</h3>
 <ul>
+<li>I am a co-organizer for the conference <a href="https://www.amherst.edu/academiclife/departments/mathematics-statistics/news/gone-fishing?shib_redir=75868449">Gone Fishing 2023</a> at Amherst College, part of a series of conferences on Poisson geometry.  This year's conference is centered on the theme “Poisson geometry and its derived, shifted, and higher variants”.
+<li>I am organizing a mini-conference at Northeastern University in April 2023, the <a href="https://brianrwilliams.github.io/neatmaps/">New England Algebraic Topology and Mathematical Physics Seminar</a> (NEAT MAPS), a miniconference in topology and quantum field theory aimed at researchers based in New England.
 <li>I have been organizing a series of summer schools on <b><a href="UMass_Physical_Mathematics_of_QFT_Summer_School.html">Physical Mathematics of QFT</a></b>, together with <a href="http://people.math.umass.edu/~gwilliam">Owen Gwilliam</a>, <a href="https://www.mtholyoke.edu/directory/faculty-staff/samantha-kirk">Samantha Kirk</a> and <a href="https://sites.google.com/view/mlotito/">Matteo Lotito</a>. We hosted an event in August 2022 and will be running a second event in July 2023.
   <li> In July 2021 I organised a program at ICTS in Bangalore on <b><a href="https://www.icts.res.in/program/qftgrt2021">Quantum Fields, Geometry and Representation Theory</a></b>  See the link for details and registration.
 <li>In August 2020, because of the postponement of our physical mathematics conference due to COVID, I recorded a series of <a href="https://sites.google.com/view/physical-mathematics-of-qfts">masterclass videos</a> on supersymmetry and the BV formalism.
