--- a/index.html
+++ b/index.html
@@ -236,7 +236,7 @@ Amherst, MA 01002
 <a href="notre_dame_notes/notre_dame_notes.html">My notes from the 2012 Notre Dame Graduate Summer School on Topology and Field Theories</a>.
 
 <hr>
-<p><a href="http://www.math.umass.edu">UMass Mathematics home page</a>.
+<p><a href="https://www.amherst.edu/academiclife/departments/mathematics-statistics">Amherst College Mathematics and Statistics home page</a>.
 
 </div>
 
