adding lecture series link

--- a/index.html
+++ b/index.html
@@ -203,6 +203,11 @@ Amherst, MA 01002
 <li>In February 2012 I organised a preseminar for the <a href="http://scgp.stonybrook.edu/archives/1964">Simons Center Workshop on SUSY Gauge Theory</a>.  Hiro Tanaka compiled a partial list of notes from the participant talks <a href="http://math.harvard.edu/~hirolee/index.php?pageID=notes">here</a>.  
 </ul>
 
+<p></br>
+<h3>Lecture Series</h3>
+<li>In 2020 I recorded a lecture series on super Yang--Mills in the BV formalism, together with Brian Williams.  You can find the lecture notes, videos and some exercises <a href="https://sites.google.com/view/physicsmathofqfts/bv-formalism?authuser=0">here</a>.
+</ul>
+
 <hr />
 
 <p></br>
