updating papers and CV

--- a/index.html
+++ b/index.html
@@ -154,6 +154,7 @@ Amherst, MA 01002
 <p><br />
 <h3>Papers and Preprints</h3>
 <ol type="1">
+<li><b>Twists of Superconformal Algebras</b> (joint with Owen Gwilliam and Matteo Lotito): Preliminary version <a href="https://chrisjelliott.github.io/Twists_of_Superconformal_Algebras.pdf">https://chrisjelliott.github.io/Twists_of_Superconformal_Algebras.pdf</a></li>
 <li><b>Defects via factorization algebras</b> (joint with Ivan Contreras and Owen Gwilliam), <a href="https://arxiv.org/abs/2208.01730">https://arxiv.org/abs/2208.01730</a></li>
 <li><b>The derived pure spinor formalism as an equivalence of categories</b> (joint with Fabian Hahner and Ingmar Saberi), <a href="https://arxiv.org/abs/2205.14133"</a>http://arxiv.org/abs/2205.14133</a></li>
  <li><b>Framed E_n-Algebras from Quantum Field Theory</b> (joint with Owen Gwilliam), <a href="http://arxiv.org/abs/2204.03702">arxiv.org/abs/2204.03702</a></li>
