updated teaching and office

--- a/index.html
+++ b/index.html
@@ -108,8 +108,8 @@ Amherst, MA 01002
 
 <p></br>
 
-<p><b>Office:</b> Science Center E206 <br />
-<b>Tel:</b> (413) 542-5893. <br />
+<p><b>Office:</b> Chapin Hall 018 <br />
+<!--<b>Tel:</b> (413) 542-5893. <br />-->
 <b>E-mail:</b> celliott AT amherst DOT edu <br />
 
 <p></br>
@@ -132,6 +132,7 @@ Amherst, MA 01002
 <p></br />
   <h3>Teaching</h3>
   <ul>
+    <li>Fall 2023: Math 211 -- Multivariate Calculus, Math 250 -- Groups, Rings and Fields, and Math 490 -- Independent study on Algebraic Topology
     <li>Spring 2023: Math 250 -- Number Theory and Math 455 -- Topology
     <li>Fall 2022: Math 211 -- Multivariate Calculus and Math 271 -- Linear Algebra
     <li>Spring 2022: Ordinary Differential Equations for Scientists and Engineers<br/>
