--- a/index.html
+++ b/index.html
@@ -132,7 +132,8 @@ Amherst, MA 01002
 <p></br />
   <h3>Teaching</h3>
   <ul>
-    <li>Fall 2023: Math 211 -- Multivariate Calculus, Math 250 -- Groups, Rings and Fields, and Math 490 -- Independent study on Algebraic Topology
+    <li>Spring 2024: : Math 121 -- Intermediate Calculus, Math 350 -- Groups, Rings and Fields, and Math 490 -- Independent study on Lie Algebras
+    <li>Fall 2023: Math 211 -- Multivariate Calculus, Math 350 -- Groups, Rings and Fields, and Math 490 -- Independent study on Algebraic Topology
     <li>Spring 2023: Math 250 -- Number Theory and Math 455 -- Topology
     <li>Fall 2022: Math 211 -- Multivariate Calculus and Math 271 -- Linear Algebra
     <li>Spring 2022: Ordinary Differential Equations for Scientists and Engineers<br/>
@@ -155,7 +156,7 @@ Amherst, MA 01002
 <p><br />
 <h3>Papers and Preprints</h3>
 <ol type="1">
-<li><b>Twists of Superconformal Algebras</b> (joint with Owen Gwilliam and Matteo Lotito): Preliminary version <a href="https://chrisjelliott.github.io/Twists_of_Superconformal_Algebras.pdf">https://chrisjelliott.github.io/Twists_of_Superconformal_Algebras.pdf</a></li>
+<li><b>Twists of Superconformal Algebras</b> (joint with Owen Gwilliam and Matteo Lotito): <a href="https://arxiv.org/abs/2403.19753">https://arxiv.org/abs/2403.19753</a></li>
 <li><b>Defects via factorization algebras</b> (joint with Ivan Contreras and Owen Gwilliam), <a href="https://arxiv.org/abs/2208.01730">https://arxiv.org/abs/2208.01730</a></li>
 <li><b>The derived pure spinor formalism as an equivalence of categories</b> (joint with Fabian Hahner and Ingmar Saberi), <a href="https://arxiv.org/abs/2205.14133"</a>http://arxiv.org/abs/2205.14133</a></li>
  <li><b>Framed E_n-Algebras from Quantum Field Theory</b> (joint with Owen Gwilliam), <a href="http://arxiv.org/abs/2204.03702">arxiv.org/abs/2204.03702</a></li>
@@ -179,9 +180,9 @@ Amherst, MA 01002
 <p><br />
 <h3>Conferences and Workshops</h3>
 <ul>
-<li>I am a co-organizer for the conference <a href="https://www.amherst.edu/academiclife/departments/mathematics-statistics/news/gone-fishing?shib_redir=75868449">Gone Fishing 2023</a> at Amherst College, part of a series of conferences on Poisson geometry.  This year's conference is centered on the theme “Poisson geometry and its derived, shifted, and higher variants”.
-<li>I am organizing a mini-conference at Northeastern University in April 2023, the <a href="https://brianrwilliams.github.io/neatmaps/">New England Algebraic Topology and Mathematical Physics Seminar</a> (NEAT MAPS), a miniconference in topology and quantum field theory aimed at researchers based in New England.
-<li>I have been organizing a series of summer schools on <b><a href="UMass_Physical_Mathematics_of_QFT_Summer_School.html">Physical Mathematics of QFT</a></b>, together with <a href="http://people.math.umass.edu/~gwilliam">Owen Gwilliam</a>, <a href="https://www.mtholyoke.edu/directory/faculty-staff/samantha-kirk">Samantha Kirk</a> and <a href="https://sites.google.com/view/mlotito/">Matteo Lotito</a>. We hosted an event in August 2022 and will be running a second event in July 2023.
+<li>I have been organizing a series of mini-conferences, so far at <a href="https://brianrwilliams.github.io/neatmaps/spring2024.html">Amherst College</a> in April 2024, at <a href="https://brianrwilliams.github.io/neatmaps/fall2023.html">Boston University</a> in October 2023 and at <a href="https://brianrwilliams.github.io/neatmaps/">Northeastern University</a> in April 2023, the  New England Algebraic Topology and Mathematical Physics Seminar (NEAT MAPS), a miniconference in topology and quantum field theory aimed at researchers based in New England.
+<li>I was a co-organizer for the conference <a href="https://www.amherst.edu/academiclife/departments/mathematics-statistics/news/gone-fishing?shib_redir=75868449">Gone Fishing 2023</a> at Amherst College, part of a series of conferences on Poisson geometry.  The conference was centered on the theme “Poisson geometry and its derived, shifted, and higher variants”.
+<li>I have been organizing a series of summer schools on <b><a href="https://umassamherst-qft-summer-school.github.io/">Physical Mathematics of QFT</a></b>, together with <a href="http://people.math.umass.edu/~gwilliam">Owen Gwilliam</a>, <a href="https://www.mtholyoke.edu/directory/faculty-staff/samantha-kirk">Samantha Kirk</a> and <a href="https://sites.google.com/view/mlotito/">Matteo Lotito</a>. We hosted events in the summer of 2022 and 2023 and will be running a third event this summer in July 2024.
   <li> In July 2021 I organised a program at ICTS in Bangalore on <b><a href="https://www.icts.res.in/program/qftgrt2021">Quantum Fields, Geometry and Representation Theory</a></b>  See the link for details and registration.
 <li>In January 2019 I organised a conference on <b><a href="https://indico.math.cnrs.fr/event/3885">Higher Structures in Holomorphic and Topological Field Theory</a></b>, together with <a href="http://www.ihes.fr/~pestun">Vasily Pestun</a>. 
 <li>In December 2014 I organised a workshop on <b><a href="workshop">Mathematical Aspects of Six-Dimensional Quantum Field Theory</a></b>, together with <a href="http://math.berkeley.edu/~nadler">David Nadler</a>, <a href="http://math.berkeley.edu/~chenhi/">Harrison Chen</a>, <a href="http://math.berkeley.edu/~kwray/">Kevin Wray</a> and Alex Zorn.  Videos for the lectures are now available <a href="https://www.youtube.com/channel/UCFxegb9gYX5eVK3oSNcM_mw/playlists">here</a>.
