--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@ Amherst, MA 01002
 <p></br>
 
 <p><b>Office:</b> Chapin Hall 018 <br />
-<!--<b>Tel:</b> (413) 542-5893. <br />-->
+<!--<b>Tel:</b> (413) 542-5893. <br />-->If X is a derived scheme and X^cl is its underlying classical scheme, and x is a point in X^cl, locally at x I can study a derived formal moduli problem, or equivalently an L_oo algebra, and I think of the structure of this L_oo algebra as being closely related to the singularity structure of X^cl at x.
 <b>E-mail:</b> celliott AT amherst DOT edu <br />
 
 <p></br>
@@ -132,11 +132,13 @@ Amherst, MA 01002
 <p></br />
   <h3>Teaching</h3>
   <ul>
+    <li>Spring 2024: Math 271 -- Linear algebra and Math 405 -- Lie Groups and Lie Algebras
+    <li>Fall 2023: On parental leave
     <li>Spring 2024: : Math 121 -- Intermediate Calculus, Math 350 -- Groups, Rings and Fields, and Math 490 -- Independent study on Lie Algebras
     <li>Fall 2023: Math 211 -- Multivariate Calculus, Math 350 -- Groups, Rings and Fields, and Math 490 -- Independent study on Algebraic Topology
     <li>Spring 2023: Math 250 -- Number Theory and Math 455 -- Topology
     <li>Fall 2022: Math 211 -- Multivariate Calculus and Math 271 -- Linear Algebra
-    <li>Spring 2022: Ordinary Differential Equations for Scientists and Engineers<br/>
+    <li>Spring 2022: Ordinary Differential Equations for Scientists and Engineers<brIf X is a derived scheme and X^cl is its underlying classical scheme, and x is a point in X^cl, locally at x I can study a derived formal moduli problem, or equivalently an L_oo algebra, and I think of the structure of this L_oo algebra as being closely related to the singularity structure of X^cl at x./>
       <p><a href="https://blogs.umass.edu/math331/">Course Webpage</a>
     <li>Fall 2021: Math 411: Introduction to Abstract Algebra<br/>
       <p><a href="411_Syllabus_2021.pdf">Syllabus</a><br/>
@@ -157,14 +159,14 @@ Amherst, MA 01002
 <h3>Papers and Preprints</h3>
 <ol type="1">
 <li><b>Twists of Superconformal Algebras</b> (joint with Owen Gwilliam and Matteo Lotito): <a href="https://arxiv.org/abs/2403.19753">https://arxiv.org/abs/2403.19753</a></li>
-<li><b>Defects via factorization algebras</b> (joint with Ivan Contreras and Owen Gwilliam), <a href="https://arxiv.org/abs/2208.01730">https://arxiv.org/abs/2208.01730</a></li>
-<li><b>The derived pure spinor formalism as an equivalence of categories</b> (joint with Fabian Hahner and Ingmar Saberi), <a href="https://arxiv.org/abs/2205.14133"</a>http://arxiv.org/abs/2205.14133</a></li>
- <li><b>Framed E_n-Algebras from Quantum Field Theory</b> (joint with Owen Gwilliam), <a href="http://arxiv.org/abs/2204.03702">arxiv.org/abs/2204.03702</a></li>
-<li><b>Higher Deformation Quantization for Kapustin-Witten Theories</b> (joint with Owen Gwilliam and Brian Williams), <a href="http://arxiv.org/abs/2108.13392">arxiv.org/abs/2108.13392</a></li>
- <li><b>Quantum Geometric Langlands Categories from N = 4 Super Yang-Mills Theory</b> (joint with Philsang Yoo), <a href="http://arxiv.org/abs/2008.10988">arxiv.org/abs/2008.10988</a></li>
+<li><b>Defects via factorization algebras</b> (joint with Ivan Contreras and Owen Gwilliam), Letters in Mathematical Physics, Vol 113, 2023, <a href="https://arxiv.org/abs/2208.01730">https://arxiv.org/abs/2208.01730</a></li>
+<li><b>The derived pure spinor formalism as an equivalence of categories</b> (joint with Fabian Hahner and Ingmar Saberi), Symmetry, Integrability and Geometry: Methods and Applications (SIGMA), Vol 19, No 22, 2023, <a href="https://arxiv.org/abs/2205.14133"</a>http://arxiv.org/abs/2205.14133</a></li>
+ <li><b>Framed E_n-Algebras from Quantum Field Theory</b> (joint with Owen Gwilliam), Reviews in Mathematical Physics, Vol 35, No 07, 2023 <a href="http://arxiv.org/abs/2204.03702">arxiv.org/abs/2204.03702</a></li>
+<li><b>Higher Deformation Quantization for Kapustin-Witten Theories</b> (joint with Owen Gwilliam and Brian Williams), Annales Henri Poincaré, Vol 25, pages 5045–5112, 2024 <a href="http://arxiv.org/abs/2108.13392">arxiv.org/abs/2108.13392</a></li>
+ <li><b>Quantum Geometric Langlands Categories from N = 4 Super Yang-Mills Theory</b> (joint with Philsang Yoo), accepted for publication in Communications in Number Theory and Physics, <a href="http://arxiv.org/abs/2008.10988">arxiv.org/abs/2008.10988</a></li>
 <li><b>Spontaneous Symmetry Breaking: a view from derived geometry</b> (joint with Owen Gwilliam), Journal of Geometry and Physics, Vol 162, 2021, <a href="http://arxiv.org/abs/2008.03599">arxiv.org/abs/2008.03599</a></li>
 <li><b>Holomorphic Poisson Field Theories</b> (joint with Brian Williams), Higher Structures, Vol 5, Issue 1, 2021, <a href="http://arxiv.org/abs/2008.02302">arxiv.org/abs/2008.02302</a></li>
-  <li><b>A Taxonomy of Twists of Supersymmetric Yang-Mills Theory</b> (joint with Pavel Safronov and Brian Williams), accepted for publication in Selecta Mathematica,  <a href="http://arxiv.org/abs/2002.10517">arxiv.org/abs/2002.10517</a> </li>
+  <li><b>A Taxonomy of Twists of Supersymmetric Yang-Mills Theory</b> (joint with Pavel Safronov and Brian Williams), Selecta Mathematica, Vol 28, 2022,  <a href="http://arxiv.org/abs/2002.10517">arxiv.org/abs/2002.10517</a> </li>
   <li><b>Multiplicative Hitchin Systems and Supersymmetric Gauge Theory</b> (joint with Vasily Pestun), Selecta Mathematica, Vol 25, Issue 64, 2019, <a href="http://arxiv.org/abs/1812.05516">arxiv.org/abs/1812.05516</a></li>
   <li><b>Topological Twists of Supersymmetric Algebras of Observables</b> (joint with Pavel Safronov), Communications in Mathematical Physics, Vol 371, pages 727-786, 2019, <a href="http://arxiv.org/abs/1805.10806">arxiv.org/abs/1805.10806</a></li>
    <li><b>A Physical Origin for Singular Support Conditions in Geometric Langlands</b> (joint with Philsang Yoo), Communications in Mathematical Physics, Vol 368, Issue 3, Pages 985-1050, 2019, <a href="http://arxiv.org/abs/1707.01292">arxiv.org/abs/1707.01292</a> </li>
@@ -180,9 +182,9 @@ Amherst, MA 01002
 <p><br />
 <h3>Conferences and Workshops</h3>
 <ul>
-<li>I have been organizing a series of mini-conferences, so far at <a href="https://brianrwilliams.github.io/neatmaps/spring2024.html">Amherst College</a> in April 2024, at <a href="https://brianrwilliams.github.io/neatmaps/fall2023.html">Boston University</a> in November 2023 and at <a href="https://brianrwilliams.github.io/neatmaps/">Northeastern University</a> in April 2023, the  New England Algebraic Topology and Mathematical Physics Seminar (NEAT MAPS), a miniconference in topology and quantum field theory aimed at researchers based in New England.
+<li>I have been organizing a series of mini-conferences, so far at <a href="https://brianrwilliams.github.io/neatmaps/fall2024.html"> Providence College</a> in November 2024, <a href="https://brianrwilliams.github.io/neatmaps/spring2024.html">Amherst College</a> in April 2024, at <a href="https://brianrwilliams.github.io/neatmaps/fall2023.html">Boston University</a> in November 2023 and at <a href="https://brianrwilliams.github.io/neatmaps/">Northeastern University</a> in April 2023, the  New England Algebraic Topology and Mathematical Physics Seminar (NEAT MAPS), a miniconference in topology and quantum field theory aimed at researchers based in New England.
 <li>I was a co-organizer for the conference <a href="https://www.amherst.edu/academiclife/departments/mathematics-statistics/news/gone-fishing?shib_redir=75868449">Gone Fishing 2023</a> at Amherst College, part of a series of conferences on Poisson geometry.  The conference was centered on the theme “Poisson geometry and its derived, shifted, and higher variants”.
-<li>I have been organizing a series of summer schools on <b><a href="https://umassamherst-qft-summer-school.github.io/">Physical Mathematics of QFT</a></b>, together with <a href="http://people.math.umass.edu/~gwilliam">Owen Gwilliam</a>, <a href="https://www.mtholyoke.edu/directory/faculty-staff/samantha-kirk">Samantha Kirk</a> and <a href="https://sites.google.com/view/mlotito/">Matteo Lotito</a>. We hosted events in the summer of 2022 and 2023 and will be running a third event this summer in June 2024.
+<li>I have been organizing a series of summer schools on <b><a href="https://umassamherst-qft-summer-school.github.io/">Physical Mathematics of QFT</a></b>, together with <a href="http://people.math.umass.edu/~gwilliam">Owen Gwilliam</a>, <a href="https://www.mtholyoke.edu/directory/faculty-staff/samantha-kirk">Samantha Kirk</a> and <a href="https://sites.google.com/view/mlotito/">Matteo Lotito</a>. We hosted events in the summers of 2022, 2023 and 2024 and will be running a fourth event this summer.
   <li> In July 2021 I organised a program at ICTS in Bangalore on <b><a href="https://www.icts.res.in/program/qftgrt2021">Quantum Fields, Geometry and Representation Theory</a></b>  See the link for details and registration.
 <li>In January 2019 I organised a conference on <b><a href="https://indico.math.cnrs.fr/event/3885">Higher Structures in Holomorphic and Topological Field Theory</a></b>, together with <a href="http://www.ihes.fr/~pestun">Vasily Pestun</a>. 
 <li>In December 2014 I organised a workshop on <b><a href="workshop">Mathematical Aspects of Six-Dimensional Quantum Field Theory</a></b>, together with <a href="http://math.berkeley.edu/~nadler">David Nadler</a>, <a href="http://math.berkeley.edu/~chenhi/">Harrison Chen</a>, <a href="http://math.berkeley.edu/~kwray/">Kevin Wray</a> and Alex Zorn.  Videos for the lectures are now available <a href="https://www.youtube.com/channel/UCFxegb9gYX5eVK3oSNcM_mw/playlists">here</a>.
