removed extraneous text

--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@ Amherst, MA 01002
 <p></br>
 
 <p><b>Office:</b> Chapin Hall 018 <br />
-<!--<b>Tel:</b> (413) 542-5893. <br />-->If X is a derived scheme and X^cl is its underlying classical scheme, and x is a point in X^cl, locally at x I can study a derived formal moduli problem, or equivalently an L_oo algebra, and I think of the structure of this L_oo algebra as being closely related to the singularity structure of X^cl at x.
+<!--<b>Tel:</b> (413) 542-5893. <br />-->
 <b>E-mail:</b> celliott AT amherst DOT edu <br />
 
 <p></br>
