Tidying teaching materials

--- a/index.html
+++ b/index.html
@@ -102,8 +102,8 @@
 <b>E-mail:</b> <a href="mailto:chris.elliott@cantab.net">chris.elliott@cantab.net</a><br />
 <b>Google Scholar:</b><a href="https://scholar.google.com/citations?user=LyMto6kAAAAJ">https://scholar.google.com/citations?user=LyMto6kAAAAJ</a><br />
 <b>Linkedin:</b><a href="https://www.linkedin.com/in/chris-elliott-21a500230/">https://www.linkedin.com/in/chris-elliott-21a500230/</a><br />
-<b>Resume:</b> <a href="Chris_Elliott_Resume.pdf">Chris Elliott Resume</a><br />
-<b>Academic CV:</b> <a href="Elliott_CV.pdf">Chris Elliott CV</a>.
+<b>Resume:</b> <a href="Chris_Elliott_Resume.pdf">Here</a><br />
+<b>Academic CV:</b> <a href="Elliott_CV.pdf">Here</a>.
 <br /> <br /> 
 
 
@@ -145,7 +145,8 @@
 <p></br />
   <h3>Teaching Materials</h3>
   <ul>
-    <li>Calculus I (Math 131H at University of Massachusetts, 2019) <a href="./Teaching/131H/131H_Syllabus_2019.pdf">Syllabus</a>, Homeworks 
+    <li><strong>Calculus I</strong> (Math 131H at University of Massachusetts, 2019)<br>
+      <a href="./Teaching/131H/131H_Syllabus_2019.pdf">Syllabus</a>, Homeworks 
       <a href="./Teaching/131H/131H_Homework_1.pdf">1</a>, 
       <a href="./Teaching/131H/131H_Homework_2.pdf">2</a>, 
       <a href="./Teaching/131H/131H_Homework_3.pdf">3</a>, 
@@ -153,16 +154,17 @@
       <a href="./Teaching/131H/131H_Homework_5.pdf">5</a>, 
       <a href="./Teaching/131H/131H_Homework_6.pdf">6</a>
     </li>
-    <li>Calculus II (Math 132 and 132H at University of Massachusetts, Fall 2020, Spring 2021, Fall 2021, Math 121 at Amherst College, 2024) 
+    <li><strong>Calculus II</strong> (Math 132 and 132H at University of Massachusetts, Fall 2020, Spring 2021, Fall 2021, Math 121 at Amherst College, 2024)<br>
       <a href="./Teaching/132H/132H_Syllabus_Fall_2020.pdf">Syllabus</a>, Homeworks 
       <a href="./Teaching/132H/132H_Homework_1.pdf">1</a>, 
       <a href="./Teaching/132H/132H_Homework_2.pdf">2</a>, 
       <a href="./Teaching/132H/132H_Homework_3.pdf">3</a>, 
       <a href="./Teaching/132H/132H_Homework_4.pdf">4</a>, 
       <a href="./Teaching/132H/132H_Homework_5.pdf">5</a>, 
-      <a href="./Teaching/132H/132H_Homework_6.pdf">6</a>,  <a href="./Teaching/121_Convergence_Tests.pdf">Convergence tests reference</a>
+      <a href="./Teaching/132H/132H_Homework_6.pdf">6</a>, 
+      <a href="./Teaching/121_Convergence_Tests.pdf">Convergence Tests Reference Guide</a>
     </li>
-    <li>Calculus III (Math 211 at Amherst College, 2022 and 2023) 
+    <li><strong>Calculus III</strong> (Math 211 at Amherst College, 2022 and 2023)<br>
       <a href="./Teaching/211/Math_211_Syllabus_Fall_2022.pdf">Syllabus</a>, Homeworks 
       <a href="./Teaching/211/211_Homework_1.pdf">1</a>, 
       <a href="./Teaching/211/211_Homework_2.pdf">2</a>, 
@@ -174,10 +176,10 @@
       <a href="./Teaching/211/211_Homework_9.pdf">9</a>, 
       <a href="./Teaching/211/211_Homework_10.pdf">10</a>
     </li>
-    <li>Differential Equations (Math 331 at University of Massachusetts, 2022) 
+    <li><strong>Differential Equations</strong> (Math 331 at University of Massachusetts, 2022)<br>
       <a href="./Teaching/331_Syllabus_2022.pdf">Syllabus</a>
     </li>
-    <li>Linear Algebra (Math 271 at Amherst College, 2022 and 2025) 
+    <li><strong>Linear Algebra</strong> (Math 271 at Amherst College, 2022 and 2025)<br>
       <a href="./Teaching/271/Math_271_Syllabus_Spring_2025.pdf">Syllabus</a>, Homeworks 
       <a href="./Teaching/271/271_Homework_1.pdf">1</a>, 
       <a href="./Teaching/271/271_Homework_2.pdf">2</a>, 
@@ -189,7 +191,7 @@
       <a href="./Teaching/271/271_Homework_8.pdf">8</a>, 
       <a href="./Teaching/271/271_Homework_9.pdf">9</a>
     </li>
-    <li>Number Theory (Math 250 at Amherst College, 2023) 
+    <li><strong>Number Theory</strong> (Math 250 at Amherst College, 2023)<br>
       <a href="./Teaching/250/Math_250_Syllabus_Spring_2023.pdf">Syllabus</a>, Homeworks 
       <a href="./Teaching/250/250_Homework_1.pdf">1</a>, 
       <a href="./Teaching/250/250_Homework_2.pdf">2</a>, 
@@ -202,7 +204,7 @@
       <a href="./Teaching/250/250_Homework_9.pdf">9</a>, 
       <a href="./Teaching/250/250_Homework_10.pdf">10</a>
     </li>
-    <li>Abstract Algebra (Math 411 at University of Massachusetts, 2021, Math 350 at Amherst College, 2023 and 2024) 
+    <li><strong>Abstract Algebra</strong> (Math 411 at University of Massachusetts, 2021, Math 350 at Amherst College, 2023 and 2024)<br>
       <a href="./Teaching/411_Syllabus_2021.pdf">UMass Syllabus</a>, 
       <a href="./Teaching/350/Math_350_Syllabus_Spring_2024.pdf">Amherst Syllabus</a>, Homeworks 
       <a href="./Teaching/350/350_Homework_1.pdf">1</a>, 
@@ -216,7 +218,7 @@
       <a href="./Teaching/350/350_Homework_9.pdf">9</a>, 
       <a href="./Teaching/350/350_Homework_10.pdf">10</a>
     </li>
-    <li>Topology (Math 455 at Amherst College, 2023) 
+    <li><strong>Topology</strong> (Math 455 at Amherst College, 2023)<br>
       <a href="./Teaching/455/Math_455_Syllabus_Spring_2023.pdf">Syllabus</a>, Homeworks 
       <a href="./Teaching/455/455_Homework_1.pdf">1</a>, 
       <a href="./Teaching/455/455_Homework_2.pdf">2</a>, 
@@ -229,7 +231,7 @@
       <a href="./Teaching/455/455_Homework_9.pdf">9</a>, 
       <a href="./Teaching/455/455_Homework_10.pdf">10</a>
     </li>
-    <li>Algebraic Topology (Reading course at Amherst College, 2023) 
+    <li><strong>Algebraic Topology</strong> (Reading course at Amherst College, 2023)<br>
       <a href="./Teaching/490/Math_490_Syllabus_Fall_2023.pdf">Syllabus</a>, Weekly Materials 
       <a href="./Teaching/490/490_Week_1.pdf">1</a>, 
       <a href="./Teaching/490/490_Week_2.pdf">2</a>, 
@@ -243,7 +245,7 @@
       <a href="./Teaching/490/490_Week_10.pdf">10</a>, 
       <a href="./Teaching/490/490_Week_11.pdf">11</a>
     </li>
-    <li>Lie Theory (Math 405 at Amherst College, 2025, Reading course at University of Massachusetts and Amherst College) 
+    <li><strong>Lie Theory</strong> (Math 405 at Amherst College, 2025, Reading course at University of Massachusetts and Amherst College)<br>
       <a href="./Teaching/405/Math_405_Syllabus_Spring_2025.pdf">Syllabus</a>, Homeworks 
       <a href="./Teaching/405/405_Homework_1.pdf">1</a>, 
       <a href="./Teaching/405/405_Homework_2.pdf">2</a>, 
@@ -256,7 +258,8 @@
       <a href="./Teaching/405/405_Homework_9.pdf">9</a>, 
       <a href="./Teaching/405/405_Homework_10.pdf">10</a>
     </li>
-    <li>Moduli Spaces in Representation Theory (Math 797RM at University of Massachusetts, 2021)  <a href="Math797RM.html">Course Webpage</a>,      <a href="./Teaching/797RM_Syllabus_Spring_2021.pdf">Syllabus</a>
+    <li><strong>Moduli Spaces in Representation Theory</strong> (Math 797RM at University of Massachusetts, 2021)<br>
+      <a href="./Teaching/797RM_Syllabus_Spring_2021.pdf">Syllabus</a>
     </li>
   </ul>
 </p>
