Readd 797RM link

--- a/index.html
+++ b/index.html
@@ -259,7 +259,7 @@
       <a href="./Teaching/405/405_Homework_10.pdf">10</a>
     </li>
     <li><strong>Moduli Spaces in Representation Theory</strong> (Math 797RM at University of Massachusetts, 2021)<br>
-      <a href="./Teaching/797RM_Syllabus_Spring_2021.pdf">Syllabus</a>
+      <a href="Math797RM.html">Course Webpage</a>, <a href="./Teaching/797RM_Syllabus_Spring_2021.pdf">Syllabus</a>
     </li>
   </ul>
 </p>
