--- a/index.html
+++ b/index.html
@@ -208,7 +208,7 @@
       <a href="./Teaching/132H/132H_Homework_4.pdf">4</a>, 
       <a href="./Teaching/132H/132H_Homework_5.pdf">5</a>, 
       <a href="./Teaching/132H/132H_Homework_6.pdf">6</a>, 
-      <a href="./Teaching/121_Convergence_Tests.pdf">Convergence Tests Reference Guide</a>
+      <a href="./Teaching/121_Convergence_Tests.pdf">Convergence Tests Reference Guide</a>, <a href="https://www.youtube.com/watch?v=YU91H4V0ngk&list=PLgCtW-aRrJCfJKA1Cx9aclx3-Lys0yqYs">Video Lectures</a>
     </li>
     <li><strong>Calculus III</strong> (Math 211 at Amherst College, 2022 and 2023)<br>
       <a href="./Teaching/211/Math_211_Syllabus_Fall_2022.pdf">Syllabus</a>, Homeworks 
@@ -251,8 +251,8 @@
       <a href="./Teaching/250/250_Homework_10.pdf">10</a>
     </li>
     <li><strong>Abstract Algebra</strong> (Math 411 at University of Massachusetts, 2021, Math 350 at Amherst College, 2023 and 2024)<br>
-      <a href="./Teaching/411_Syllabus_2021.pdf">UMass Syllabus</a>, 
-      <a href="./Teaching/350/Math_350_Syllabus_Spring_2024.pdf">Amherst Syllabus</a>, Homeworks 
+      <a href="./Teaching/411_Syllabus_2021.pdf">Syllabus 1</a>, 
+      <a href="./Teaching/350/Math_350_Syllabus_Spring_2024.pdf">Syllabus 2</a>, Homeworks 
       <a href="./Teaching/350/350_Homework_1.pdf">1</a>, 
       <a href="./Teaching/350/350_Homework_2.pdf">2</a>, 
       <a href="./Teaching/350/350_Homework_3.pdf">3</a>, 
