Stack content vertically on mobile

--- a/index.html
+++ b/index.html
@@ -59,6 +59,32 @@
 			float: right;
 		}
 
+		@media (max-width: 768px) {
+			html {
+				margin: 20px 15px;
+			}
+			
+			.text {
+				width: 100%;
+			}
+			
+			.side {
+				width: 100%;
+				float: none;
+				margin-bottom: 30px;
+			}
+			
+			.side img {
+				max-width: 300px;
+				width: 100%;
+				height: auto;
+			}
+			
+			hr {
+				width: 100%;
+			}
+		}
+
 		.photo {
 			position: relative;
 			width: 100%;
@@ -145,6 +171,7 @@
 </div>
 </div>
 
+
 <div class="text">
 
 <h1>Chris Elliott</h1>
@@ -153,7 +180,7 @@
 <b>Personal E-mail:</b> <a href="javascript:void(0)" class="email-display">
   <span class="email-user">chris.elliott</span><span class="email-separator"> [at] </span><span class="email-domain">cantab</span><span class="email-tld">.net</span>
 </a><br />
-<b>Work E-mail:</b> <a href="javascript:void(0)" class="email-display">
+<b>Professional E-mail:</b> <a href="javascript:void(0)" class="email-display">
   <span class="email-user">chris</span><span class="email-separator"> [at] </span><span class="email-domain">timaeus</span><span class="email-tld">.co</span>
 </a><br />
 <b>Google Scholar:</b><a href="https://scholar.google.com/citations?user=LyMto6kAAAAJ">https://scholar.google.com/citations?user=LyMto6kAAAAJ</a><br />
@@ -327,7 +354,7 @@
 <ul>
 <li>I organized a series of summer schools on <b><a href="https://sites.google.com/umass.edu/pmqftss">Physical Mathematics of QFT</a></b>, together with <a href="http://people.math.umass.edu/~gwilliam">Owen Gwilliam</a>, <a href="https://www.mtholyoke.edu/directory/faculty-staff/samantha-kirk">Samantha Kirk</a> and <a href="https://sites.google.com/view/mlotito/">Matteo Lotito</a>. We hosted events in the summers of 2022, 2023, 2024 and 2025.
 <li>In 2023 and 2024 I organized a series of miniconferences, the <b>New England Algebraic Topology and Mathematical Physics Seminars (NEAT MAPS)</b>.  These were workshops centered around topology and quantum field theory aimed at researchers based in New England.  We ran four events, hosted at <a href="https://brianrwilliams.github.io/neatmaps/fall2024.html"> Providence College</a> in November 2024, <a href="https://brianrwilliams.github.io/neatmaps/spring2024.html">Amherst College</a> in April 2024, at <a href="https://brianrwilliams.github.io/neatmaps/fall2023.html">Boston University</a> in November 2023 and at <a href="https://brianrwilliams.github.io/neatmaps/">Northeastern University</a> in April 2023.
-<li>I was a co-organizer for the conference <b><a href="https://www.amherst.edu/academiclife/departments/mathematics-statistics/news/gone-fishing?shib_redir=75868449">Gone Fishing 2023</a></b> at Amherst College, part of a series of conferences on Poisson geometry.  The conference was centered on the theme “Poisson geometry and its derived, shifted, and higher variants”.
+<li>I was a co-organizer for the conference <b><a href="https://www.amherst.edu/academiclife/departments/mathematics-statistics/news/gone-fishing?shib_redir=75868449">Gone Fishing 2023</a></b> at Amherst College, part of a series of conferences on Poisson geometry.  The conference was centered on the theme "Poisson geometry and its derived, shifted, and higher variants".
   <li> In July 2021 I organised a program at ICTS in Bangalore on <b><a href="https://www.icts.res.in/program/qftgrt2021">Quantum Fields, Geometry and Representation Theory</a></b>  See the link for details and registration.
 <li>In January 2019 I organised a conference on <b><a href="https://indico.math.cnrs.fr/event/3885">Higher Structures in Holomorphic and Topological Field Theory</a></b>, together with <a href="http://www.ihes.fr/~pestun">Vasily Pestun</a>. 
 <li>In December 2014 I organised a workshop on <b><a href="workshop">Mathematical Aspects of Six-Dimensional Quantum Field Theory</a></b>, together with <a href="http://math.berkeley.edu/~nadler">David Nadler</a>, <a href="http://math.berkeley.edu/~chenhi/">Harrison Chen</a>, <a href="http://math.berkeley.edu/~kwray/">Kevin Wray</a> and Alex Zorn.  Videos for the lectures are now available <a href="https://www.youtube.com/channel/UCFxegb9gYX5eVK3oSNcM_mw/playlists">here</a>.
@@ -390,4 +417,3 @@
 </div>
 
 </body>
-
